[package]
name = "rusty-trails"
version = "0.1.0"
authors = ["Christopher Schmidt <christopher.schmidt@posteo.de>"]
edition = "2018"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
console = "0.11.3"
glob = "0.3.0"
indicatif = "0.14.0"
kamadak-exif = "0.5.1"
num_cpus = "1.13.0"
rawloader = "0.36.2"
rayon = "1.3.0"

[build-dependencies]
cmake = "0.1.43"

[profile.release]
lto = "fat"
#codegen-units = 1
