# add the automatically determined parts of the RPATH
# which point to directories outside the build tree to the install RPATH
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

SET( EXIV2_MIN_VERSION "0.21" )
FIND_PACKAGE( Exiv2 )
INCLUDE_DIRECTORIES( ${EXIV2_INCLUDE_DIR} )
ADD_DEFINITIONS( ${EXIV2_DEFINITIONS})

SET( LIBRAW_MIN_VERSION "0.17" )
FIND_PACKAGE( LibRaw )
INCLUDE_DIRECTORIES( ${LIBRAW_INCLUDE_DIR} )
ADD_DEFINITIONS(${LIBRAW_DEFINITIONS})

FIND_PACKAGE( ZLIB )
INCLUDE_DIRECTORIES( ${ZLIB_INCLUDE_DIR} )
ADD_DEFINITIONS( ${ZLIB_DEFINITIONS} )

INCLUDE_DIRECTORIES( ${raw2dng_SOURCE_DIR}/libdng
        ${raw2dng_SOURCE_DIR}/libdng/dng-sdk/source
        ${CMAKE_CURRENT_BINARY_DIR} )

ADD_LIBRARY( raw2dng STATIC dngwriter.cpp )

TARGET_LINK_LIBRARIES( raw2dng dng ${ZLIB_LIBRARIES} ${LIBRAW_LIBRARIES} ${EXIV2_LIBRARIES} )
TARGET_COMPILE_OPTIONS( raw2dng PRIVATE -fexceptions -std=c++11 )

INSTALL(TARGETS raw2dng DESTINATION .)
